try to fix collabs getting cognito error #1

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/recursive32.png" sizes="32x32">
     <link rel="icon" type="image/png" href="%PUBLIC_URL%/recursive16.png" sizes="16x16">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <script src="%PUBLIC_URL%/aws-cognito-sdk.min.js"></script>
+    <script src="%PUBLIC_URL%/amazon-cognito-identity.min.js"></script>
     <meta name="theme-color" content="#ffffff">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
